--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
-    "redux": "^5.0.1"
+    "react-router-dom": "^6.23.1",
+    "redux": "^5.0.1",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
+    "@redux-devtools/core": "^4.0.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
